2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[uninstall] Fix bug: Make sure everything is properly deleted.

	* Makefile.am (update-libsite-module-catalog): New target.
	(install-data-hook) [USE_CMOD]: Use ‘update-libsite-module-catalog’.
	(uninstall-hook): New target.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Refactor src/Makefile.am slightly.

	* Makefile.am (schemesource, EXTRA_DIST, d_DATA): New vars.
	(dist_d_DATA): Delete var.
	[!USE_CMOD] (d_DATA): Convert assignment from ‘=’ to ‘+=’.
	[MAINTAINER_MODE] (scheme.tsar): Use $(schemesource).

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons int] Avoid using literal symbols with ‘#\#’ in the name.

	These cause round-trip problems that vary from
	one Guile implementation to the next.

	* postgres-qcons.scm (*infix-operations*):
	Use ‘string->symbol’ for symbols named "#", "##", "?#".

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Spiff docstrings; use ‘-args:’ instead of ‘-sig:’.

	* libpq.c: Throughout, as described above.
	* postgres-col-defs.scm: Likewise.
	* postgres-gxrepl.scm: Likewise.
	* postgres-meta.scm: Likewise.
	* postgres-qcons.scm: Likewise.
	* postgres-resdisp.scm: Likewise.
	* postgres-table.scm: Likewise.
	* postgres-types.scm: Likewise.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc int] Use ‘doc:’+comment for ‘PRIMPROC’ docstrings.

	* libpq.c: Throughout, convert series-of-strings
	style docstrings to ‘doc:’+comment style docstrings.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions for all gh_ elements.

	* gi.h (BOOLEANP, EXACTP, NULLP, PAIRP, STRINGP, SYMBOLP)
	(PROCEDUREP, BOOLEAN, NUM_INT, NUM_ULONG, SYMBOL, STRING, BSTRING)
	(CHARACTER, C_INT, VECTOR_LEN, EQ, CONS, CAR, CDR, SETCAR, SETCDR)
	(EVAL_STRING, APPLY, LISTIFY): New #define:s.
	(MEMQ): New macro.
	(ROZT_X): Use ‘BSTRING’.
	(PCHAIN): Use ‘LISTIFY’.
	* libpq.c: Use new abstractions, throughout.

2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
