@@ -1,3 +1,13 @@
+2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[v] Make partial install depend on ../src "make all".
+
+	Omission from 2011-05-14, "Do a partial
+	install under test/; point ‘%load-path’ there".
+
+	* Makefile.am (fake-install): Depend on ../src/stamp-all;
+	also, delete any previous tree before starting.
+
 2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build inst] Add support for "no C module" mode.
