@@ -1,5 +1,17 @@
 2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[v] Make partial install depend on ../src "make all".
+
+	Omission from 2011-05-14, "Do a partial
+	install under test/; point ‘%load-path’ there".
+
+	* Makefile.am (stamp-all): New target.
+	(noinst_DATA): New var.
+	[MAINTAINER_MODE] (noinst_DATA): Change ‘=’ to ‘+=’.
+	(CLEANFILES): Add stamp-all.
+
+2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[uninstall] Fix bug: Make sure everything is properly deleted.
 
 	* Makefile.am (update-libsite-module-catalog): New target.
